--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image:secure_url" content="https://angularexampleapp.com/assets/images/og.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:url" content="https://angularexampleapp.com">
+
     <!-- <meta http-equiv="Content-Security-Policy" content="
           default-src *;img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com
           data:
@@ -53,6 +54,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <!-- Google Tag Manager -->
     <script>
+        var global = global || window;
+        var Buffer = Buffer || [];
+        var process = process || {
+            env: {
+                DEBUG: undefined
+            },
+            version: []
+        };
+    </script>
+    <script>
         (function(w, d, s, l, i) {
             w[l] = w[l] || [];
             w[l].push({
@@ -78,6 +89,7 @@
           height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <app-root>
         <div class="loading-page">
             <div class="spinner">
@@ -88,6 +100,7 @@
             </div>
         </div>
     </app-root>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4T-_WtIWxmWQl4FP0-KxKbp-Jj6DZExs&libraries=places"></script>
 </body>
 
 </html>
