--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
     <meta property="og:image:secure_url" content="https://angularexampleapp.com/assets/images/og.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:url" content="https://angularexampleapp.com">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.0/dist/instantsearch.min.css">
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.0.0/dist/instantsearch-theme-algolia.min.css">
     <!-- <meta http-equiv="Content-Security-Policy" content="
           default-src *;img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com
           data:
@@ -80,6 +82,8 @@
         })(window, document, 'script', 'dataLayer', 'GTM-TF7QP5M');
     </script>
     <!-- End Google Tag Manager -->
+    <link rel="manifest" href="manifest.json">
+
 </head>
 
 <body>
